# bare-bones-deps

./: .cmake-lint  .gitignore  .gitmodules  CMakeLists.txt  main.cc  test.cc  universe.yml
.circleci/: config.yml  config_old.yml  universe.yml
.github/workflows/: check.yml
kydeps-nodefs/: CMakeLists.txt
mode-1/: CMakeLists.txt
mode-1/kydeps/: CMakeLists.txt  cache.cmake
mode-1a/: CMakeLists.txt
mode-1a/kydeps/: CMakeLists.txt
mode-1b/kydeps/: CMakeLists.txt  cache.cmake
mode-2/: CMakeLists.txt
mode-3/: CMakeLists.txt
mode-dist-build/: CMakeLists.txt
mode-dist-build/kydeps/: CMakeLists.txt
